[tool.poetry]
name = "statistics"
version = "0.0.1"
description = ""
authors = ["yoinezero <yoinezero.a@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
typer = "^0.9.0"
sqlalchemy = "^2.0.16"
psycopg-binary = "^3.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
